PAS-1103 La til tiling for UMTS